<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_welcome"/>

    <EditText
        android:id="@+id/admin_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_user" />

    <EditText
        android:id="@+id/admin_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/admin_password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/admin_login"
        android:id="@+id/login_button"/>

</LinearLayout>