<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:padding="24dp"
        android:textSize="21sp"/>

    <Button
        android:id="@+id/account_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:layout_margin="4dp"
        android:padding="24dp"
        android:textSize="21sp"/>

    <Button
        android:id="@+id/place_hold_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_hold"
        android:layout_margin="4dp"
        android:padding="24dp"
        android:textSize="21sp"/>

    <Button
        android:id="@+id/manage_system_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/manage_system"
        android:layout_margin="4dp"
        android:padding="24dp"
        android:textSize="21sp"/>







</LinearLayout>